# gh-pr-mcp

./: .mcp.json  CLAUDE.md  README.md  pyproject.toml  pyrightconfig.json
.claude/: settings.json
.github/workflows/: ci.yml  publish-python.yml  publish.yml
src/gh_mcp/: app.py  run.py  server.py
src/gh_mcp/tools/: gh.py  git.py
src/gh_mcp/tools/gh/: __init__.py  _api.py  issue_close.py  issue_comment.py  issue_create.py  issue_edit.py  issue_list.py  issue_view.py  pr_checkout.py  pr_comment.py  pr_create.py  pr_delete_comment.py  pr_edit.py  pr_edit_comment.py  pr_list.py  pr_merge.py  pr_resolve_thread.py  pr_review.py  pr_view.py  release_create.py  release_list.py  repo_create.py  repo_view.py  run_list.py  run_rerun.py  run_view.py  workflow_list.py  workflow_run.py
src/gh_mcp/tools/git/: __init__.py  add.py  branch.py  cherry_pick.py  clean.py  clone.py  commit.py  diff.py  fetch.py  init.py  log.py  merge.py  merge_base.py  prune.py  pull.py  push.py  rebase.py  remote.py  reset.py  restore.py  stash.py  status.py  tag.py  worktree.py
tests/: conftest.py  test_gh_tools.py  test_git_tools.py
