[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-mcp"
version = "0.1.0"
description = "MCP server wrapping git and gh into structured, permission-controlled tools"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
gh-mcp = "gh_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
