[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gh-mcp"
version = "0.1.0"
description = "MCP server exposing a focused set of GitHub PR and review helpers the gh CLI can't do in one shot"
requires-python = ">=3.13"
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
dependencies = [
    "mcp[cli]>=1.6.0",
]

[project.scripts]
gh-mcp = "gh_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/gh_mcp"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pyrefly>=0.16",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.pyrefly]
project-includes = ["src", "tests"]
python-version = "3.13"
search-path = ["src"]
